# MyRAT

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
src/: main.rs
src/config/: pins.rs
src/images/: mouse.raw  mouse_blue_100.raw
tool/: img_converter.py
