[package]
edition = "2024"
name = "rat_neo"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Embassy
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rom-v2-intrinsics",
    "binary-info",
    "rp2040",
] }

# defmt & panic handling
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# RT support
cortex-m-rt = "0.7.5"

# ST7789V3 display
embedded-graphics = "0.7.1"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.7.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"